ajout inscription si jamais fait

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -22,6 +22,7 @@
     "Connection Timed Out": "La connexion a expiré",
     "Continue": "Continuer",
     "Created": "Créé·e",
+    "Create an account":"Créer un compte",
     "Current Password": "Mot de passe actuel",
     "Dashboard": "Tableau de bord",
     "Delete Account": "Supprimer le compte",
